Correct text alignment for yoga classes descriptions

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -95,7 +95,7 @@ header {
 /* home page main section */
 
 .main {
-    clear: both;
+    
     text-align: center;
     margin: auto;
     padding-top: 6rem;
@@ -191,7 +191,7 @@ header {
 }
 
 .yogaclasses div {
-    text-align: center;
+    text-align: left;
     margin: 0 2rem 2rem;
     padding: 1.5rem;
     background-color: rgb(255, 255, 255, 0.8);
@@ -347,6 +347,12 @@ iframe {
     }
     .main {
         padding-top: 3rem;
+    }
+
+    .yogaclasses div {
+    
+    margin: 0 1rem 1rem;
+   
     }
     .pricebox p {
     font-size: 1.5rem;
